# ORRERY

./: .gitignore  ARCHITECTURE.md  AUTONOMY_CHARTER.md  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DECISIONS.md  QUESTIONS.md  README.md  RUN_STATE.md  SESSION_MEMORY.md  TASKLIST.md
Intercom/: .gitignore  INTERCOM.contract.md  MODULE.md  NOTES.md  intercom.py
contracts/: README.md  algebra.contract.md  algebra.schema.json  autotune.contract.md  autotune.schema.json  carve.contract.md  carve.schema.json  hsmi-stab.contract.md  hsmi-stab.schema.json  lens.contract.md  lens.schema.json  mcp.contract.md  mcp.schema.json  mcts.contract.md  mcts.schema.json  orrery.contract.md  orrery.schema.json  orreryd.contract.md  orreryd.schema.json  posit.contract.md  posit.schema.json  ratchet.contract.md  ratchet.schema.json  shoot.contract.md  shoot.schema.json  someone.contract.md  someone.schema.json  trace-born.contract.md  trace-born.schema.json
docs/: INIT_hsmi-stab_v11_session.md  INIT_hsmi-stab_witness_session.md  INIT_someone_session.md  PROPOSAL_2026-07-09_wave_plan.md  PROPOSAL_2026-07-11_tooling-requests-from-tinyuniverse.md  SESSION_HISTORY_2026-07-12.md  SESSION_HISTORY_2026-07-14.md
goldens/: README.md
harness/: README.md  verify.py
lib/: MODULE.md
runs/: _vcfg_a.json  _vcfg_b.json  _vdet1.json  _vgate.json  algebra_twopass_verify.md  analyze_round01.py  autotune_twopass_verify.md  carve_twopass_verify.md  hsmi-stab_k1_witness_handback.md  intercom_live1_demo.md  lens_spike_geodesic.md  lens_twopass_verify.md  lens_v1_1_0_twopass_verify.md  mcp_twopass_verify.md  mcts_twopass_verify.md  orrery_twopass_verify.md  orrery_v1_1_0_cache_twopass_verify.md  orreryd_twopass_verify.md  posit_twopass_verify.md  ratchet_twopass_verify.md  shoot_twopass_verify.md  someone_round01_reproduce.md  someone_round01_run.ps1  someone_twopass_verify.md  someone_v1_2_0_twopass_verify.md  trace-born_c-trace_handback.md  trace-born_twopass_verify.md  verify_20260705_190525.md  verify_20260705_202030.md  verify_20260705_202550.md  verify_20260705_204248.md  (+19 more)
(+100 files in other folders)
